--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,6 @@ body {
     font-family: var(--font-family);
 }
 
-
 /* Default buttons */
 .btn {
     padding: 16px;
@@ -73,7 +72,7 @@ body {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     position: fixed;
-    z-index: 1;
+    z-index: 1000;
     top: 150px;
     right: 0;
     max-width: 400px; 
@@ -102,6 +101,61 @@ body {
 
 .err-goodErr {
     color: #17a77c;
+}
+
+/* Verification code popup section */
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    z-index: 999; /* Make sure the overlay is above other content */
+}
+
+.popup{
+    background: linear-gradient(to right, var(--primary-color), var(--gradient-match));
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    position: absolute; /* Positioning relative to the overlay */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center the popup */
+    z-index: 1000;
+}
+.popup-flex{
+    margin: 0 auto;
+    text-align: center;
+    padding: 48px;
+}
+.popup-flex h2{
+    font-size: 16px;
+    color: var(--default-primary-color);
+}
+
+.code-input {
+    display: flex;
+    width: 320px; 
+    margin: 20px auto;
+    gap: 20px;
+}
+
+.code-input input {
+    width: 40px; /* Set a uniform width */
+    height: 40px; /* Set a uniform height */
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    transition: border-color 0.3s ease-in-out;
+}
+
+.code-input input:focus {
+    border-color: #007bff;
+    outline: none;
 }
 
 
@@ -725,18 +779,31 @@ body {
 .bar-20{
     width: 20%; /* Set the progress percentage */
 }
+.bar-30{
+    width: 30%; /* Set the progress percentage */
+}
 .bar-40{
     width: 40%; /* Set the progress percentage */
+}
+.bar-50{
+    width: 50%; /* Set the progress percentage */
 }
 .bar-60{
     width: 60%; /* Set the progress percentage */
 }
+.bar-70{
+    width: 70%; /* Set the progress percentage */
+}
 .bar-80{
     width: 80%; /* Set the progress percentage */
+}
+.bar-90{
+    width: 90%; /* Set the progress percentage */
 }
 .bar-100{
     width: 100%; /* Set the progress percentage */
 }
+
 .interest-container .questions{
     margin-top: 32px;
 }
