--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
     --section-primary: #414141;
     --section-secondary: #545454;
     --section-others: #F1F1F1;
+    --light-ash:#6F6F6F;
 }
 
 /* Body */
@@ -43,19 +44,30 @@ body {
 
 }
 
+.btn-tertiary {
+    background-color: var(--default-primary-color);
+    color: var(--default-secondary-color);
+    border: 2px solid var(--default-secondary-color);
+    border-radius: 100px;
+    width: 300px;
+
+}
+
 
 .btn-secondary {
     background-color: var(--button-secondary);
     color: var(--default-secondary-color);
 }
 
-.btn-tertiary {
-    border: 2px solid var(--section-primary);
-    color: var(--default-secondary-color);
-    background-color: transparent;
-    border-radius: 100px;
-    width: 60%;
-
+.btn-others1 {
+    background-color: var(--light-ash);
+    color: var(--default-primary-color);
+    /* width: 150px; */ 
+}
+.btn-others2 {
+    background-color: var(--section-primary);
+    color: var(--default-primary-color);
+    /* width: 150px; */ 
 }
 
 .btn-text {
@@ -185,6 +197,10 @@ body {
     margin-right: 10px;
     transform: 0.3s ease-in-out;
     margin-top: 10px;
+}
+
+.TopBarContainer .TopBarFlex .buttons .special {
+    margin-right: 16px;
 }
 
 .TopBarContainer .TopBarFlex .buttons .btn:hover {
@@ -605,13 +621,15 @@ body {
     width: 100%;
 }
 
-.information-image{
+.progress-information img{
     width: 200px;
     height: 200px;
-    object-fit: cover;
-    background-color: var(--default-primary-color);
-    border-radius: 50%;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.25);
+    transform: 0.3s ease-in-out;
+    
+}
+
+.progress-information img:hover{
+    transform: scale(1.3);
 }
 
 .information-details{
@@ -619,6 +637,10 @@ body {
     flex-direction: column;
     margin-left: 48px;
     width: 800px;
+}
+
+.information-details .btn{
+    width: 150px;
 }
 
 .information-details-header{
@@ -842,4 +864,129 @@ body {
 .interest-container .buttons a .btn:last-child{
     margin-left: 16px;
     width: 100px;
+}
+
+/* Profile page section */
+.profile-container{
+    margin: 0 auto;
+    width: 90%;
+    padding-top: 90px;
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 32px;
+}
+
+/* FlexA */
+
+.profile-container .flexA{
+    position: relative;
+    background-color: var(--default-primary-color);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.25);
+    padding: 52px 48px;
+    margin: 32px 0;
+}
+
+.profile-container .flexA .profile-picture .frame{
+    border:2px;
+    width: 210px;
+    height: 210px;
+    border:2px solid var(--primary-color-2);
+    border-radius: 100%;    
+    /* position: relative; */
+    margin: 0 auto;
+}
+.profile-container .flexA .profile-picture img{
+    position: absolute;
+    object-fit: cover;
+    bottom: 286px;
+    left: 98px; 
+    width: 200px;
+    height: 200px;
+    /* transform: 0.3s ease-in-out; */
+}
+.profile-container .flexA .profile-picture img:hover{
+    transform: scale(0.9);
+}
+
+.profile-container .flexA .user-details{
+    text-align: center;
+    padding: 16px;
+    /* margin-bottom: 48px; */
+}
+.profile-container .flexA .user-details h2{
+    color: var(--default-secondary-color);
+    font-weight: 700;
+    padding-bottom: 6px;
+}
+
+.profile-container .flexA .user-details p{
+    color: var(--light-ash);
+    padding-bottom: 6px;
+    /* font-size: 20px; */
+}
+
+.profile-container .flexA .btn:last-child{
+    width: 100%;
+}
+
+/* FlexB */
+.profile-container .flexB{
+    margin: 32px 0;
+}
+
+.profile-container .flexB .flexBi{
+    background-color: var(--default-primary-color);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.25);
+    padding: 24px 48px;
+    width: 779px;
+}
+
+.profile-container .flexB .flexBi h2{
+    margin-bottom: 32px;
+}
+
+.profile-container .flexB .flexBi .details .detail{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    margin-top: 16px; 
+}
+.profile-container .flexB .flexBi .details .detail h3{
+    font-size: 18px;
+    color: var(--light-ash);
+}
+
+.profile-container .flexB .flexBii{
+    margin-top: 16px;
+    background-color: var(--default-primary-color);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.25);
+    padding: 24px 48px;
+}
+.profile-container .flexB .flexBii .group-detail{
+    display: flex;
+    justify-content: space-between;
+    margin: 24px 0;
+    align-items: center;
+    
+}
+
+.profile-container .flexB .flexBii .group-detail .flex2 img{
+    width: 24px;
+    height: 24px;
+    object-fit: cover;
+    margin-right: 7px;
+    
+}
+
+.profile-container .flexB .flexBii .support{
+    display: flex;
+    justify-content: space-between;
+}
+
+.profile-container .flexB .flexBii .support .btn:last-child{
+    width: 50%;
+}
+.profile-container .flexB .flexBii .support .btn:first-child{
+    width: 50%;
+    margin-right: 24px;
 }
